<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/fondo_app"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvLibro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Nuevo libro"
        android:textColorHint="@color/marron_letra_rv"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textAlignment="center"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contenedorTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/titulo"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contenedorAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/autor"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contenedorCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_marginTop="10dp"
        >

        <AutoCompleteTextView
            android:id="@+id/auto_complete_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Categoria"
            android:inputType="none"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contenedorEditorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/editorial"
            />
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contenedorPaginas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPaginas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="number"
            android:hint="@string/paginas"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contenedorImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/imagen"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddLibro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_nuevo_libro"
            android:textColor="@color/white"
            android:backgroundTint="@color/marron_letra_rv"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="275dp"/>



    </LinearLayout>
</ScrollView>

</LinearLayout>